--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Khula:wght@600&family=Pridi:wght@200&family=Roboto+Mono:wght@400;700&display=swap"
     rel="stylesheet">
-  <title>React App</title>
+  <title>Manuel Desole</title>
 </head>
 
 <body>
